# chainsail-resources

./: .gitignore  CODEOWNERS  README.md
chainsail_helpers/: README.md  pyproject.toml
chainsail_helpers/chainsail_helpers/pdf/: __init__.py
chainsail_helpers/chainsail_helpers/pdf/pymc/: __init__.py
chainsail_helpers/chainsail_helpers/pdf/pymc3/: __init__.py
chainsail_helpers/chainsail_helpers/pdf/stan/: README.md  __init__.py  bridgestan.py  httpstan.py
chainsail_helpers/chainsail_helpers/scripts/: README.md  concatenate_samples.py
chainsail_helpers/scripts/: README.md  concatenate_samples.py
chainsail_utils/: README.md  pyproject.toml  requirements.txt
chainsail_utils/chainsail-utils/pdfs/pymc3/: example.py
documentation/: README.md  defining_custom_probability.md  parameters.md  walkthrough.md
documentation/algorithms/: README.md  hmc.md  replica_exchange.md  schedule_tuning.md
examples/: README.md  job.json
examples/bridgestan-mixture/: README.md  mixture.stan  probability.py
examples/mixture/: README.md  compare.py  plots_1D.py  probability.py  requirements.txt  shell.nix  single_chain.py
examples/nix/: chainsail_helpers.nix
examples/pymc-mixture/: README.md  probability.py
examples/pymc3-mixture/: README.md  probability.py
examples/soft-kmeans/: .gitignore  README.md  chainsail_samples.npy  compare.py  data.txt  data_1D_nonoverlapping_75_100.txt  make_data.py  make_data_1D.py  plots.py  probability.py  sc_samples.npy  shell-jupyter.nix  shell.nix  show_sc_results.py  show_sc_results_1D.py  single_chain.py  soft-kmeans.ipynb
examples/soft-kmeans/rwmc/: __init__.py
examples/stan-mixture/: README.md  probability.py
examples/stan-soft-kmeans/: README.md  data.txt  make_data.py  probability.py  shell-dev.nix  shell-jupyter.nix  soft-kmeans.ipynb  stan-model.txt
examples/stan-soft-kmeans/run1/: soft-kmeans.ipynb
examples/stan-soft-kmeans/run1/optimization_run0/: config.yml  dos.pickle  final_stepsizes.pickle  schedule.pickle
examples/stan-soft-kmeans/run1/optimization_run1/: config.yml  initial_states.pickle  initial_stepsizes.pickle  schedule.pickle
examples/stan-soft-kmeans/run2/: probability.py  soft-kmeans.ipynb
examples/stan-soft-kmeans/run2/optimization_run0/: dos.pickle
examples/stan-soft-kmeans/run2/optimization_run1/: config.yml  initial_states.pickle  schedule.pickle
examples/stan-soft-kmeans/test/: soft-kmeans.md
postprocessing/: concatenate_samples.py
utils/: pyproject.toml
utils/chainsail-utils/pdfs/: __init__.py
utils/chainsail-utils/pdfs/pymc3/: __init__.py
utils/chainsail-utils/pdfs/stan/: __init__.py
(+36 files in other folders)
