[tool.poetry]
name = "chainsail-helpers"
version = "0.1.3"
description = "Probability distribution interfaces, examples, and utilities for the Chainsail sampling service"
authors = ["Simeon Carstens <simeon.carstens@tweag.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/tweag/chainsail-resources'
homepage = 'https://github.com/tweag/chainsail-resources'
keywords = ['probabilistic programming', 'sampling', 'MCMC']
packages = [ { include = 'chainsail_helpers' } ]

[tool.poetry.scripts]
concatenate-samples = 'chainsail_helpers.scripts.concatenate_samples:main'

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.2"
pymc = { version = "^4.1.4", optional = true }
requests = { version = "^2.26.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.poetry.extras]
pymc = [ "pymc" ]
stan = [ "requests" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
